syntax = "proto3";

package destroyer;

import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/protobuf/timestamp.proto";

 option go_package = "github.com/franklynobleC/microserviceTask/grpcServiceA/destroyerService";


  service  DestroyerService{
    rpc AcquireTarget(AcquireTargetRequest)returns ( AcquireTargetResponse) { 
      option (google.api.http) = {
        post:"/v1/Destroyer/destroyer" 
        body: "*"
        
      };
    
    }
     

     rpc ListMultipleTarget(ListMultipleTargetRequest) returns (ListMultipleTargetResponse) {
      option (google.api.http) =  {
      get: "/v1/Destroyer/multipletarget"
      
     };
    }


    rpc ListAllTarget(ListAllTargetRequest) returns (ListAllTargetResponse) {
      option (google.api.http) =  {
      get: "/v1/Destroyer/alltarget"
      
     };
    }

    rpc GetSingleTarget(GetSingleTargetRequest)returns (GetSingleTargetResponse){
       option (google.api.http) = {
         get:"/v1/Destroyer/singletarget/{id}"
    };

  }
}

        
    message GetSingleTargetRequest{
      string id = 1;
    }


    message GetSingleTargetResponse{
        string id = 2 ;      
        string message = 4;
       
      string  createdat = 3;
       string updatedat = 1;  
       
    }
     

     message  ListMultipleTargetRequest{}

     message ListMultipleTargetResponse{
      string  id = 4;
      string targetname = 1;
      repeated Data datas = 2;
       string createdat = 5;
        
           
     }
  


     message  ListAllTargetRequest{}

     message ListAllTargetResponse{
      string  id = 4;
      string targetname = 1;
      repeated Data datas = 2;
       string createdat = 5;
        
           
     }
  

     message Data {
        string id = 2 ;      
        string message = 4;
       string  createdat = 3;
       string updatedat = 1;
        //   created_on = 5;
        //  int64 updated_on = 7;
     }
  

  message AcquireTargetRequest{    
           string message = 3;
       }  
  
   message Datas2 {
        string id = 2 ;      
        string message = 4;
      
    }


   message AcquireTargetResponse{
       string id = 2 ;      
        string message = 4;
       string  createdat = 3;
       string updatedat = 1;
       
   }



